{
    "main_screen_home": "Home",

    "main_screen_scanner": "Scanner",

    "main_screen_settings": "Settings",

    "login_screen_email": "Email address",

    "login_screen_enter_mail": "Please enter email",

    "login_screen_enter_password": "Please enter password",

    "login_screen_password": "Password",

    "login_screen_login": "Login",

    "login_screen_forget_password": "Forgot Password ?",

    "forget_screen_reset_password": "Reset Password",

    "phone_verification_screen_phone_verification": "Phone Verification",

    "phone_verification_screen_enter_the_code": "Enter the code sent to ",

    "phone_verification_screen_please_enter_the_code": "Please enter the code",

    "phone_verification_screen_verification_failed": "Verification failed",

    "phone_verification_screen_verify": "Verify",

    "phone_verification_screen_didnt": "Didn't receive the code? ",

    "phone_verification_screen_coderesent": "Code resent",

    "phone_verification_screen_resendcode": "Resend Code",

    "phone_verification_screen_youcansend": "You can send again code in",

    "phone_verification_screen_seconds": "seconds",

    "comments_screen_ratings": "Ratings",

    "comments_screen_no_rates": "No Rates",

    "notification_screen_notifications": "Notifications",

    "notification_screen_no_notifications": "You don't have notification",

    "other_screen_park_name": "Park Name",

    "other_screen_park_address": "Park Address",

    "other_screen_employee_name": "Employee Name",

    "other_screen_employee_email": "Employee Email",

    "other_screen_employee_permission": "Employee Permission",

    "other_screen_employee_phone": "Employee Phone",

    "other_screen_vendor_id": "Vendor ID",

    "other_screen_total_rating": "Total Rating",

    "other_screen_open_time": "Open Time",

    "other_screen_please_enter_hour": "Please enter hour",

    "other_screen_hour": "Hour",

    "other_screen_okay": "Okay",

    "other_screen_close_time": "Close Time",

    "other_screen_security": "Security",

    "other_screen_accessibility": "Accessibility",

    "other_screen_service": "Service",

    "other_screen_location": "Location",

    "other_screen_image_list": "Image List",

    "other_screen_price_list": "Price List",

    "other_screen_comments": "Comments",

    "other_screen_wallet_history": "Wallet History",

    "other_screen_employee_list": "Employee List",

    "other_screen_support": "Support",

    "other_screen_logout": "Logout",

    "other_screen_no_data": "No Data",

    "park_detail_screen_detail": "Details",

    "park_detail_screen_no_parks": "No Parks",

    "scanner_screen_process": "Processing...",

    "vendor_select_screen_permission": "Permission:",

    "vendor_select_screen_address": "Address:",

    "dashboard_screen_park_status": "Park Status",

    "dashboard_screen_today_total_parks": "Today Total Parks",

    "dashboard_screen_active_parks": "Active Parks",

    "dashboard_screen_awaiting_approval": "Awaiting Approval",

    "dashboard_screen_today_rejected_parks": "Today Rejected Parks",

    "dashboard_screen_today_earnings": "Today's Earnings",

    "comment_screen_rate_date": "Rate Date:",







    "forget_screen_send": "We sent an email to reset your password."



}