...
      accessibility: json["accessibility"].toDouble(),
      rating: json["rating"].toDouble(),
      security: json["security"].toDouble(),
      serviceQuality: json["serviceQuality"].toDouble(),
      latitude: json["latitude"].toDouble(),
      longitude: json["longitude"].toDouble(),
      active: json["active"]as bool,
      openTime: json["openTime"],
      closeTime: json["closeTime"],
      imgList: json["imgList"] as List,
      price: json["price"] as List,
    );
  }
...
