...
              ),
            ]),
          ),
          centerTitle: true,
          actions: [
            IconButton(
              key: Key('bell'),
              icon: const Icon(LineIcons.bell),
              onPressed: () {
                Navigator.push(
                  context,
                  MaterialPageRoute(
                    builder: (context) => const NotificationScreen(),
...
